# seanpilot-server

./: .gitignore  pyproject.toml
seanpilot_server/: app.py
