[tool.poetry]
name = "seanpilot-server"
version = "0.1.0"
description = ""
authors = ["Sean F <fitzgerald.sean.t@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
openai = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
